--- a/templates/emergente.html
+++ b/templates/emergente.html
@@ -9,7 +9,9 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1F3B5C, #FFD24C);
+      background-image: url('/static/images/emergente.png');
+      background-size: cover;
+      background-position: center;
       height: 100vh;
       display: flex;
       justify-content: center;
