--- a/templates/emergente.html
+++ b/templates/emergente.html
@@ -15,11 +15,12 @@
     body {
       font-family: Arial, sans-serif;
       background-image: url('/static/images/emergente.png');
-      background-size: 100% 100%;
+      background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      justify-content: flex-end;
       align-items: center;
       color: white;
       text-align: center;
@@ -28,6 +29,7 @@
     .container {
       background-color: rgba(0, 0, 0, 0.3);
       padding: 30px 20px;
+      margin-bottom: 40px;
       border-radius: 20px;
       box-shadow: 0px 8px 30px rgba(0,0,0,0.4);
       backdrop-filter: blur(8px);
@@ -82,4 +84,3 @@
   </div>
 </body>
 </html>
-
