--- a/templates/socio.html
+++ b/templates/socio.html
@@ -50,7 +50,7 @@
       cursor: pointer;
     }
   </style>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQldjdCRIWhdXc_gz81TPr1xGyK6K5z1w></script>
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQldjdCRIWhdXc_gz81TPr1xGyK6K5z1w&callback=initMap"></script>
 </head>
 <body>
   <div id="map"></div>
