--- a/templates/socio.html
+++ b/templates/socio.html
@@ -50,7 +50,7 @@
       cursor: pointer;
     }
   </style>
-   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQldjdCRIWhdXc_gz81TPr1xGyK6K5z1w&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
 </head>
 <body>
   <div id="map"></div>
